# glocate

./: .anjuta_sym_db.db  Makefile.in  README.md  configure  configure.ac  glocate.ui  glocate.ui~
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/src/: Makefile
Debug/src/.deps/: appWindow.Po  main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  appWindow.c  appWindow.c~  appWindow.h  appWindow.h~  glocate  glocate.ui  glocate.vala  main.c  main.c~  main.h  main.h~
